# phoenix-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  01-project-charter.docx  01-project-charter.md  02-team-structure.docx  02-team-structure.md  03-phases-milestones.docx  03-phases-milestones.md  04-task-breakdown-wbs.docx  04-task-breakdown-wbs.md  05-product-requirements.docx  05-product-requirements.md  06-technical-architecture.docx  06-technical-architecture.md  07-api-specification.docx  07-api-specification.md  08-development-standards.docx  08-development-standards.md  09-testing-qa-plan.docx  09-testing-qa-plan.md  10-risk-management.docx  10-risk-management.md  11-communication-plan.docx  11-communication-plan.md  12-definition-of-done.docx  12-definition-of-done.md  CHANGELOG.md  Dockerfile  README.md  master-index.docx  master-index.md  ollama-recommendation.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: index.md  plugin-development.md
docs/adapters/: README.md
docs/architecture/decisions/: ADR-001-pure-scraping.md
docs/compliance/: COMPLIANCE-001-public-data-only.md  COMPLIANCE-TEST-PLAN.md  ETHICAL-GUARDRAILS.md  PLATFORM-TOS-SUMMARY.md  README.md
docs/features/: phoenix-ai-extraction.md
examples/plugin/: hackernews.py
scripts/: e2e_http_scrape.py  generated_adapter_poc.py  phoenix_architect_poc.py  scraping_assistant.py
src/phoenix/: __init__.py  __main__.py  engine.py  exceptions.py  options.py  pipeline.py  router.py  strategy_selector.py  version.py
src/phoenix/adapters/: __init__.py  base.py  facebook.py  generic.py  instagram.py  linkedin.py  tiktok.py  x_twitter.py  youtube.py
src/phoenix/architect/: __init__.py  coder.py  critic.py  explorer.py  fixture_generator.py  inspector.py  orchestrator.py  researcher.py  template_generator.py  writer.py
src/phoenix/cli/: __init__.py  chat.py  main.py  setup.py
src/phoenix/collectors/: __init__.py  base.py  browser.py  browser_pool.py  direct.py
src/phoenix/infrastructure/: __init__.py  audit_logger.py  config.py  license_manager.py  rate_limiter.py  session_manager.py  storage.py  vault.py
src/phoenix/intelligence/: __init__.py  anti_bot_recovery.py  change_detector.py  classifier.py  entities.py  selector_health.py  selector_repair.py
src/phoenix/models/: __init__.py  classification.py  config.py  document.py  output.py  session.py  strategy.py
src/phoenix/plugins/: __init__.py  loader.py  manifest.py  registry.py
src/phoenix/processing/: __init__.py  ai_assistant.py  archiver.py  domain_memory.py  html_extractor.py  normalizer.py  phoenix_ai_extractor.py
src/phoenix/scrapers/: __init__.py  base.py  browser.py  http.py  selector_engine.py
src/phoenix/stealth/: __init__.py  captcha.py  humanizer.py  profile.py  rotator.py  warming.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_cli_collect_mock_server.py  test_cli_version.py
tests/fixtures/: README.md  __init__.py  facebook_page.html  facebook_post.html  generic_page.html  instagram_post.html  instagram_profile.html  linkedin_post.html  linkedin_profile.html  static_blog.html  tiktok_profile.html  tiktok_video.html  x_profile.html  x_tweet.html  youtube_channel.html  youtube_video.html
tests/fixtures/plugins/: __init__.py
tests/integration/: __init__.py  test_infrastructure_integration.py  test_pipeline.py  test_pipeline_integration.py  test_router_integration.py
tests/intelligence/: test_intelligence_layer.py  test_ollama_integration.py
tests/plugins/: __init__.py  test_example_plugin.py
tests/unit/: __init__.py  test_ai_assistant.py  test_archiver.py  test_audit_logger.py  test_browser_collector.py  test_browser_pool.py  test_change_detector.py  test_cli.py  test_cli_chat.py  test_cli_setup.py  test_config_loader.py  test_direct_collector.py  test_domain_memory.py  test_engine.py  test_exceptions.py  test_facebook_adapter.py  test_fixture_generator.py  test_generic_adapter.py  test_imports.py  test_instagram_adapter.py  test_license_manager.py  test_linkedin_adapter.py  test_main.py  test_models.py  test_options.py  test_phoenix_ai_extractor.py  test_pipeline.py  test_pipeline_storage.py  test_plugin_interface.py  test_plugin_loader.py  test_rate_limiter.py  test_router.py  test_session_manager.py  test_stealth_captcha.py  test_stealth_humanizer.py  test_stealth_profile.py  test_stealth_rotator.py  test_stealth_warming.py  test_storage.py  test_strategy_selector.py  (+4 more)
tests/unit/architect/: __init__.py  test_coder.py  test_critic.py  test_explorer.py  test_generate_adapter.py  test_inspector.py  test_orchestrator.py  test_researcher.py  test_template_generator.py  test_writer.py
(+5 files in other folders)
